general tidying, bug fixes, and renewal changes